# fuzzy

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  fuzzy.py  genbuild.sh  test.lua
src/: filesystem.h  fuzzy.c  fuzzy.h  linux.c  main.c  platform.c  platform.h  scheduler.h  score.c  score.h  structures.h  task.c  task.h  win32.c
